twitter login strategy

--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "express": "latest",
     "express-namespace": "latest",
     "mongoose": "latest",
-    "mongoose-user": "latest",
     "passport": "latest",
-    "passport-local": "latest",
+    "passport-twitter": "latest",
     "connect-mongo": "latest",
     "connect-flash": "latest",
     "view-helpers": "latest",
